// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a checked radio 1`] = `
<div
  class="radioGroup"
>
  <div
    class="base root_base tappable radio"
  >
    <input
      class="tappable nativeInput_default"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="checkable_base tappable"
    >
      <div
        class="checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="circle_default_base circle_inner_base"
      />
    </div>
    <div
      class="focusRect_base"
    />
    <label
      class="tappable label_default_base"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        radio label 1
      </span>
    </label>
  </div>
  <div
    class="base root_base tappable radio"
  >
    <input
      class="tappable nativeInput_default"
      name="radio"
      type="radio"
      value="2"
    />
    <div
      class="checkable_base tappable"
    >
      <div
        class="checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="circle_default_base circle_inner_base"
      />
    </div>
    <div
      class="focusRect_base"
    />
    <label
      class="tappable label_default_base"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        radio label 2
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a group of radios 1`] = `
<div
  class="radioGroup"
>
  <div
    class="base root_base tappable radio"
  >
    <input
      class="tappable nativeInput_default"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="checkable_base tappable"
    >
      <div
        class="checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="circle_default_base circle_inner_base"
      />
    </div>
    <div
      class="focusRect_base"
    />
    <label
      class="tappable label_default_base"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        radio label 1
      </span>
    </label>
  </div>
  <div
    class="base root_base tappable radio"
  >
    <input
      class="tappable nativeInput_default"
      name="radio"
      type="radio"
      value="2"
    />
    <div
      class="checkable_base tappable"
    >
      <div
        class="checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="circle_default_base circle_inner_base"
      />
    </div>
    <div
      class="focusRect_base"
    />
    <label
      class="tappable label_default_base"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        radio label 2
      </span>
    </label>
  </div>
  <div
    class="base root_base tappable radio"
  >
    <input
      class="tappable nativeInput_default"
      name="radio"
      type="radio"
      value="3"
    />
    <div
      class="checkable_base tappable"
    >
      <div
        class="checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="circle_default_base circle_inner_base"
      />
    </div>
    <div
      class="focusRect_base"
    />
    <label
      class="tappable label_default_base"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        radio label 3
      </span>
    </label>
  </div>
  <div
    class="base root_base tappable radio"
  >
    <input
      class="tappable nativeInput_default"
      name="radio"
      type="radio"
      value="4"
    />
    <div
      class="checkable_base tappable"
    >
      <div
        class="checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="circle_default_base circle_inner_base"
      />
    </div>
    <div
      class="focusRect_base"
    />
    <label
      class="tappable label_default_base"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        radio label 4
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a single radio 1`] = `
<div
  class="radioGroup"
>
  <div
    class="base root_base tappable radio"
  >
    <input
      class="tappable nativeInput_default"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="checkable_base tappable"
    >
      <div
        class="checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="circle_default_base circle_inner_base"
      />
    </div>
    <div
      class="focusRect_base"
    />
    <label
      class="tappable label_default_base"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      >
        radio label 1
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a single radio with no value or label 1`] = `
<div
  class="radioGroup"
>
  <div
    class="base root_base tappable radio"
  >
    <input
      checked=""
      class="tappable nativeInput_default nativeInput_checked"
      name="radio"
      type="radio"
      value=""
    />
    <div
      class="checkable_base tappable"
    >
      <div
        class="checkableItem_base circle_default_base circle_outer_base circle_selected_base"
      />
      <div
        class="circle_default_base circle_inner_base circle_selected_base circle_selectedInner_base"
      />
    </div>
    <div
      class="focusRect_base"
    />
    <label
      class="tappable label_default_base"
    >
      <span
        class="base textAlign_left root_base sizes_4_base colours_neutral_base fontWeight_normal_base base"
      />
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when with component child should match the snapshot 1`] = `
<div
  class="radioGroup"
>
  <div
    class="base root_base tappable radio"
  >
    <input
      class="tappable nativeInput_default"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="checkable_base tappable"
    >
      <div
        class="checkableItem_base circle_default_base circle_outer_base"
      />
      <div
        class="circle_default_base circle_inner_base"
      />
    </div>
    <div
      class="focusRect_base"
    />
    <label
      class="tappable label_default_base"
    >
      <h1
        class="root_base sizes_8_base colours_dark_base fontWeight_bold_base base"
      >
        Hello checkbox
      </h1>
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when with component child should render the component child 1`] = `
<h1
  class="root_base sizes_8_base colours_dark_base fontWeight_bold_base base"
>
  Hello checkbox
</h1>
`;
